# rust-live-chat

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/cli_client/: mod.rs
src/cli_client/api/: mod.rs  users.rs
src/cli_client/apis/: mod.rs  rooms.rs  users.rs
src/cli_client/flows/: mod.rs  room_chat.rs  room_choice.rs  user_authentication.rs
src/entities/: message.rs  mod.rs  room.rs  server.rs  user.rs
src/web_server/: mod.rs
src/web_server/handlers/: mod.rs  rooms.rs  users.rs
src/web_server/routes/: mod.rs  rooms.rs  users.rs
