[package]
name = "rust-live-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
regex = "1.5"
serde_json = "1.0.132"
warp = "0.3.7"
mockito = "1.5.0"
